--- a/css/jquery.fullPage.css
+++ b/css/jquery.fullPage.css
@@ -46,7 +46,7 @@ html.fp-enabled,
     transition: all 0.3s ease-out;
 }
 .fp-section.fp-table, .fp-slide.fp-table {
-    display: table;
+    /*display: table;*/
     table-layout:fixed;
     width: 100%;
 }
