Botones para compartir

--- a/css/conserso.css
+++ b/css/conserso.css
@@ -1,85 +1,117 @@
-body{
+body {
     background: white;
 }
 
-.owl-wrapper{
-	/*width: :15%;*/
-	height: 100%
+.owl-wrapper {
+    /*width: :15%;*/
+    height: 100%;
 }
 
-.centrar-table{
-	    position: absolute;
+.centrar-table {
+    position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
 }
 
-.owl-carousel{
-	height: 100%;
-}
-.owl-item{
-	height: 100%;
+.owl-carousel {
+    height: 100%;
 }
 
-.owl-wrapper-outer{
-	height: 100%;
+.owl-item {
+    height: 100%;
 }
 
-.owl-wrapper{
-	height: 100%;
+.owl-wrapper-outer {
+    height: 100%;
 }
 
-.image1{
-	background-image: url('../images/fondo7.png') ;
+.owl-wrapper {
+    height: 100%;
+}
+
+.image1 {
+    background-image: url('../images/fondo7.png');
     /*-webkit-filter: contrast(50%);*/
-	/*background-color: rgba(192,192,192,1);*/
-	/*-webkit-filter: brightness(70%);*/
-filter: brightness(85%);	
-	background-position: 50% 65%;
+    /*background-color: rgba(192,192,192,1);*/
+    /*-webkit-filter: brightness(70%);*/
+    filter: brightness(85%);
+    background-position: 50% 65%;
 }
 
 
 /*-----------------------------------------------------------
 -----------------------preloader---------------------------*/
 
-            .fly-in-text li {
-                display: inline-block;
-                padding-bottom: 8 0;
-                font-weight: 300;
-                font-size: 4.1em;
-                color: #929183;
-                opacity: 1;
-                /*transition: all 2.5s ease;*/
-            }
-            .fly-in-text li:last-child {
-                margin-right: 0;
-            }
-            .fly-in-text.hidden1 li {
-                opacity: 0;
-            }
-            .fly-in-text.hidden1 li:nth-child(1) { transform: translateX(-200px) translateY(-200px); }
-            .fly-in-text.hidden1 li:nth-child(2) { transform: translateX(20px) translateY(100px); }
-            .fly-in-text.hidden1 li:nth-child(3) { transform: translateX(-150px) translateY(-80px); }
-            .fly-in-text.hidden1 li:nth-child(4) { transform: translateX(10px) translateY(-200px); }
-            .fly-in-text.hidden1 li:nth-child(5) { transform: translateX(-300px) translateY(200px); }
-            .fly-in-text.hidden1 li:nth-child(6) { transform: translateX(20px) translateY(-20px); }
-            .fly-in-text.hidden1 li:nth-child(7) { transform: translateX(30px) translateY(200px); }
-            .fly-in-text.hidden1 li:nth-child(8) { transform: translateX(-50px) translateY(300px); }
-            .fly-in-text.hidden1 li:nth-child(9) { transform: translateX(320px) translateY(190px); }
-            
-            #intro {
-                  list-style: none;
-                    position: absolute;
-                    width: 80%;
-                    text-align: center;
-                    left: 50%;
-                    top: 50%;
-                    transform: translateX(-50%) translateY(-50%);
-            }
-.letras-logo{
+.fly-in-text li {
+    display: inline-block;
+    padding-bottom: 8 0;
+    font-weight: 300;
+    font-size: 4.1em;
+    color: #929183;
+    opacity: 1;
+    /*transition: all 2.5s ease;*/
+}
+
+    .fly-in-text li:last-child {
+        margin-right: 0;
+    }
+
+.fly-in-text.hidden1 li {
+    opacity: 0;
+}
+
+    .fly-in-text.hidden1 li:nth-child(1) {
+        transform: translateX(-200px) translateY(-200px);
+    }
+
+    .fly-in-text.hidden1 li:nth-child(2) {
+        transform: translateX(20px) translateY(100px);
+    }
+
+    .fly-in-text.hidden1 li:nth-child(3) {
+        transform: translateX(-150px) translateY(-80px);
+    }
+
+    .fly-in-text.hidden1 li:nth-child(4) {
+        transform: translateX(10px) translateY(-200px);
+    }
+
+    .fly-in-text.hidden1 li:nth-child(5) {
+        transform: translateX(-300px) translateY(200px);
+    }
+
+    .fly-in-text.hidden1 li:nth-child(6) {
+        transform: translateX(20px) translateY(-20px);
+    }
+
+    .fly-in-text.hidden1 li:nth-child(7) {
+        transform: translateX(30px) translateY(200px);
+    }
+
+    .fly-in-text.hidden1 li:nth-child(8) {
+        transform: translateX(-50px) translateY(300px);
+    }
+
+    .fly-in-text.hidden1 li:nth-child(9) {
+        transform: translateX(320px) translateY(190px);
+    }
+
+#intro {
+    list-style: none;
+    position: absolute;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+.letras-logo {
     font-size: 200px;
 }
-.centrar-servicio{
+
+.centrar-servicio {
     width: 80%;
     height: 60%;
     position: absolute;
@@ -87,7 +119,8 @@ filter: brightness(85%);
     top: 50%;
     transform: translate(-50%, -50%);
 }
-.centrar-contacto{
+
+.centrar-contacto {
     width: 80%;
     height: 69%;
     position: absolute;
@@ -95,56 +128,59 @@ filter: brightness(85%);
     top: 50%;
     transform: translate(-50%, -50%);
 }
-  .fly-in-text {
-        padding: 0px;
-    }
-  
 
-  .centrar-QuienSomos{
+.fly-in-text {
+    padding: 0px;
+}
+
+
+.centrar-QuienSomos {
     width: 80%;
     height: 60%;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-  }
+}
+
 @media only screen and (min-width: 320px) {
-    .fly-in-text li{
+    .fly-in-text li {
         font-size: 1.9em;
     }
-
- 
 }
+
 @media only screen and (min-width: 768px) {
-   .fly-in-text li{
+    .fly-in-text li {
         font-size: 3.5em;
     }
-    .letras-logo{
+
+    .letras-logo {
         font-size: 250px;
     }
-
-
 }
 
-@media only screen and (max-width: 768px){
-      #contact-area .form-group textarea {
-  height: 90px;
-}
-#contactenos-cont{
-display: none;
-}
+@media only screen and (max-width: 768px) {
+    #contact-area .form-group textarea {
+        height: 90px;
+    }
 
-     .centrar-contacto{
-height: 80%;
+    #contactenos-cont {
+        display: none;
+    }
 
- }
- .centrar-servicio{
-    height: 80%;
- }
-  .centrar-QuienSomos{
-    height: 70%;
-  }
-      .page-footer {
+    .centrar-contacto {
+        height: 80%;
+    }
+
+    .centrar-servicio {
+        height: 80%;
+    }
+
+    .centrar-QuienSomos {
+        height: 70%;
+    }
+
+    .page-footer {
         padding-top: 30px;
         padding-bottom: 30px;
     }
@@ -158,39 +194,40 @@ height: 80%;
     .quitar a {
         font-size: 14px;
     }
-
 }
 
 @media only screen and (max-width: 425px) {
 
-     .contenido-servicios{
+    .contenido-servicios {
         display: none;
     }
-    .ocultar-info{
+
+    .ocultar-info {
         display: none;
     }
- .imag-quienesSomos{
-    display:none;
- }
+
+    .imag-quienesSomos {
+        display: none;
+    }
 }
 
 
-.active a{
+.active a {
     background-color: #D40A18 !important;
 }
 
-.section-header p{
+.section-header p {
     color: black;
     font-weight: 300px;
     font-size: 17px;
 }
 
 
-.paginas{
+.paginas {
     margin: 0 auto;
 }
 
-.page-footer label{
+.page-footer label {
     margin: 0px;
 }
 
@@ -203,7 +240,6 @@ height: 80%;
     text-decoration: none;
     /*color: #AFAEAE;*/
     background-color: rgba(255, 255, 255, 0.0) !important;
-
     color: #37617C;
     background-image: url('../images/iconos.svg');
 }
@@ -263,13 +299,11 @@ height: 80%;
 
 
 @media only screen and (min-width: 1024px) {
-
-
-.center-content {
+    .center-content {
         margin: 0 auto;
         width: 980PX;
-    }   
- /*footer*/
+    }
+    /*footer*/
     .footer-content {
         display: flex;
     }
@@ -278,22 +312,20 @@ height: 80%;
             width: 33.33%;
             margin: auto;
         }
-    }
+}
 
-    .desarrollado a{
-        background-color: rgba(255, 255, 255, 0.0) !important;
-    }
+.desarrollado a {
+    background-color: rgba(255, 255, 255, 0.0) !important;
+}
 
-
-.quitar{
+.quitar {
     display: flex;
 }
 
-
-.message{
+.message {
     height: 100px;
 }
 
-#section1{
+#section1 {
     background: url(../Images/Fondo.svg);
 }
